--- a/academy/src/main/resources/application.properties
+++ b/academy/src/main/resources/application.properties
@@ -8,3 +8,10 @@ spring.h2.console.enabled=true
 
 accenture.academy.apikey=dupa
 accenture.academy.places.apikey=dupa2
+
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=create-drop
+
+#spring.security.user.name=user
+#spring.security.user.password=password
+#spring.security.user.roles="USER"
